--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
-<HTML>
-<HEAD><TITLE>The Red Banner Party</TITLE></HEAD>
-<BODY BGCOLOR=“red” TEXT=“black” VLINK=“yellow” ALINK=“teal”>
-<DIV ALIGN=“center”>
-<IMG SRC=“placeholder.jpg” ALIGN=“center”>
-<H1>THE RED BANNER PARTY</H1>
-<B>An Anti-Revisionist Marxist-Leninist Party</B>
-</DIV>
-<P ALIGN=“left”>
-<B>LINKS:</B>
-<A HREF=“constitution.htm”>PARTY CONSTITUTION</A>
-<A HREF=“contact.htm”>CONTACT US</A>
-<DIV ALIGN=“center”>
-<H2>WHO ARE WE?</H2>
-</DIV>
-<P ALIGN=“center>
-What is The Red Banner Party? In Short, We are a United Front of Socialists, Marxists, 
-Leninists, and Maoists who have agreed to Create a Anti-Revisionist Marxist-Leninist Party that strives to improve the lives of all working class people, no matter their skin color, gender, sexual preference, political standing or self identity.
-<DIV ALIGN=“center”>
-<H2>OUR GOALS</H2>
-</DIV>
-The Goals of The Red Banner Party are Straightforward and Simple: Total Revolution and The establishment of a Socialist Society. We petition for living wages, affordable housing, healthcare, education, and food. We wish to abolish the class system that has for so long only benefited the few, and not the many. We hope to aid all causes that will create not just a unified society, but a unified world.
-</DIV ALIGN=“center”>
-<H2>WHY JOIN US?</H2>
-</DIV>
-There are many reasons to join our movement. We will provide Three to start. One, for the first time in decades, Marxist Ideals have appealed more than those of the capitalists. Two, The situation of wages, housing, and healthcare within the United States is unacceptable and must be rectified as soon as possible. Three, The Red Banner Party offers a friendly, approachable atmosphere with hardworking members towards our goal of Revolution.
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Red Banner Party</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <img src="redbanner.webp" alt="Red Banner Party">
+    <div class="top-matter">
+      <div class="top-matter-right">
+        <h1>The Red Banner Party</h1>
+        <p><strong>An Anti-Revisionist Marxist-Leninist Party</strong></p>
+      </div> 
+      <p><strong>Links:</strong></p>
+      <ul>
+          <li><a href="constitution.htm">Party Constitution</a></li>
+          <li><a href="contact.htm">Contact Us</a></li>
+      </ul>
+    <h2>Who Are We?</h2>
+    <p>What is The Red Banner Party? In short, we are a united front of Socialists, Marxists, Leninists, and Maoists who have agreed to create an Anti-Revisionist Marxist-Leninist Party that strives to improve the lives of all working-class people, no matter their skin color, gender, sexual preference, political standing, or self-identity.</p>
+    <h2>Our Goals</h2>
+    <p>The goals of The Red Banner Party are straightforward and
+</body>
